tests/miniJava/pos/000770_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( new java ( ) ) System.out.println ( { } ) ; else while ( 0 ) { } } }
