tests/miniJava/neg/006239_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while int 0 ) { } } }
